--- a/package.json
+++ b/package.json
@@ -12,25 +12,33 @@
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.0.0",
-    "fastify-plugin": "^4.0.0",
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
-    "fastify-cli": "^5.5.0"
+    "fastify": "^4.0.0",
+    "fastify-cli": "^5.5.0",
+    "fastify-plugin": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@types/tap": "^15.0.5",
-    "ts-node": "^10.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "concurrently": "^7.0.0",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "fastify-tsconfig": "^1.0.1",
+    "prettier": "^2.7.1",
     "tap": "^16.1.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
