--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
+    "@prisma/client": "^4.5.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.5.0",
     "fastify-plugin": "^4.0.0"
@@ -37,6 +38,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "fastify-tsconfig": "^1.0.1",
     "prettier": "^2.7.1",
+    "prisma": "^4.5.0",
     "tap": "^16.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
