--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && tap --ts \"test/**/*.test.ts\"",
+    "test": "rm -rf TOKENS_DB && rm -rf USERS_DB npm run build:ts && tsc -p test/tsconfig.json && tap --branches=50 --functions=50 --lines=50 --statements=50 --reporter=list --ts \"test/**/*.test.ts\"",
     "start": "npm run build:ts && fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +22,17 @@
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
-    "@prisma/client": "^4.5.0",
+    "@fastify/type-provider-typebox": "^2.3.0",
+    "@sinclair/typebox": "^0.25.2",
+    "@types/pouchdb": "^6.4.0",
+    "@types/uuid": "^8.3.4",
+    "bcrypt": "^5.1.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.5.0",
-    "fastify-plugin": "^4.0.0"
+    "fastify-plugin": "^4.0.0",
+    "pouchdb": "^7.3.0",
+    "pouchdb-find": "^7.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
@@ -37,8 +45,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fastify-tsconfig": "^1.0.1",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
-    "prisma": "^4.5.0",
     "tap": "^16.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
