--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/sensible": "^5.0.0",
     "@fastify/type-provider-typebox": "^2.3.0",
     "@sinclair/typebox": "^0.25.2",
+    "eslint-plugin-import": "^2.26.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.5.0",
     "fastify-plugin": "^4.0.0",
