--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "fastify": "^4.0.0",
     "fastify-cli": "^5.5.0",
     "fastify-plugin": "^4.0.0",
-    "mongoose": "^6.7.1"
+    "fastify-socket.io": "^4.0.0",
+    "mongoose": "^6.7.1",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
@@ -43,6 +45,7 @@
     "prettier": "^2.7.1",
     "tap": "^16.1.0",
     "ts-node": "^10.4.0",
+    "types-fastify-socket.io": "^0.0.1",
     "typescript": "^4.5.4"
   }
 }
