--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
+    "@fastify/cors": "^8.2.0",
     "@fastify/sensible": "^5.0.0",
     "@fastify/swagger": "^8.2.1",
     "@fastify/swagger-ui": "^1.3.0",
